turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:8: error: reassignment to val
  setCouleur=Color.red
            ^DiskFour:10: error: reassignment to val
  setCouleur=Color.yellow
            ^DiskFour:12: error: reassignment to val
  setCouleur=Color.pink
            ^